--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pirateship/cli",
-  "version": "0.2.1",
+  "version": "0.2.1-fs",
   "description": "Thin command-line interface for Raspberry Pi low level configuration.",
   "main": "cli.js",
   "bin": {
