--- a/lib/interfaces.none.template
+++ b/lib/interfaces.none.template
@@ -1,14 +1,10 @@
 auto lo
-
 iface lo inet loopback
+
+auto eth0
 iface eth0 inet dhcp
 
 allow-hotplug wlan0
-#iface wlan0 inet manual
-#wpa-roam /etc/wpa_supplicant/wpa_supplicant.conf
-#iface default inet dhcp
-
 iface wlan0 inet dhcp
- wireless-essid WIRELESSSSID 
-   wireless-mode managed
-
+  wireless-essid WIRELESSSSID 
+  wireless-mode managed
