--- a/lib/interfaces.eth0.template
+++ b/lib/interfaces.eth0.template
@@ -1,6 +1,7 @@
 auto lo
-
 iface lo inet loopback
+
+auto eth0
 iface eth0 inet static
   address IPADDRESS
   netmask NETMASK
@@ -9,5 +10,5 @@ iface eth0 inet static
 
 allow-hotplug wlan0
 iface wlan0 inet manual
-wpa-roam /etc/wpa_supplicant/wpa_supplicant.conf
+  wpa-roam /etc/wpa_supplicant/wpa_supplicant.conf
 iface default inet dhcp
