--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/ole-vi/pirateship/issues",
-    "email": "stefan@unterhauser.name"
+    "email": "vi@ole.org"
   },
   "homepage": "https://github.com/ole-vi/pirateship"
 }
