--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "commander": "^2.9.0",
+    "sleep": "^5.1.1",
     "underscore": "^1.8.3"
   },
   "repository": {
